<resources>
    <string name="app_name">DotaHeroes</string>
    <string name="name_hero">Name hero</string>
    <string name="basic_character">Basic character</string>
    <string name="agility">Agility</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="move_speed">Move speed</string>
    <string name="basic_health">Basic health</string>
    <string name="basic_mana">Basic mana</string>
    <string name="hero">Heroes</string>
    <string name="program">Program</string>
    <string name="petrov_alexander">Petrov Alexander</string>
    <string name="github">GitHub</string>
    <string name="_21_06_2022">21.06.2022</string>
    <string name="date_of_creation">Date of creation</string>
    <string name="author">Author</string>
    <string name="https_github_com_wintezz">https://github.com/wintezz</string>
    <string name="about_application">About Application</string>
</resources>